--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="list" style="background-color: #FFFFFF">
 	<header class="caption">
-		<h1>О Докере. Просто.</h1>
+		<h1>Патент вместо налогов</h1>
 		<p>Evgeny Lukianchikov</p>
 	</header>
 	<section class="slide cover" id="Cover"><div>
@@ -89,7 +89,51 @@
 		<img src="pictures/10.png" alt="">
 	</div></section>
 
-    <section class="slide shout"><div>
+	<section class="slide shout"><div>
+		<h2>Внимание!<br/>Патент заменяет не все платежи!</h2>
+	</div></section>
+
+	<section class="slide" id="slide11" style="background-color: white"><div>
+		<h2>Что придётся заплатить ещё</h2>
+		<ol>
+			<li>Фиксированные взносы в ПФР и ФФОМС (23153,33 р. в 2016 г.);</li>
+			<li>Взносы в ПФР с дохода (1% от суммы годового дохода превышающей 300 000 р.);</li>
+			<li>Налоги по видам деятельности, не покрытые патентами.</li>
+			<li>Разнообразные штрафы (например 70 000 р. за непредоставление данных в статистику)</li>
+		</ol>
+	</div></section>
+
+	<section class="slide" id="slide12" style="background-color: white"><div>
+		<h2>Самое важное:</h2>
+		<h2 class="important">Следите за обновлениями законодательства, есть ненулевая вероятность влететь на конские штрафы</h2>
+		<h2></h2>
+		<style>
+			h2.important {
+				color: red;
+				font-style: italic;
+			}
+			#github-links .smaller {
+				font-size: smaller;
+			}
+		</style>
+	</div></section>
+
+	<section class="slide" id="slide13" style="background-color: white"><div>
+		<h2>Подписывайтесь на обновления от</h2>
+		<ol>
+			<li>собственного бухгалтера</li>
+			<li>Интернет-бухгалтерии
+				<ul>
+					<li>http://www.moedelo.org</li>
+					<li>http://nebopro.ru/</li>
+					<li>http://my-fin.ru/</li>
+				</ul>
+			</li>
+			<li>Журналы? :)</li>
+		</ol>
+	</div></section>
+
+  <section class="slide shout"><div>
 		<h2>Спасибо за внимание</h2>
 	</div></section>
     
